SAKIII-5240 fix overflow issue with narrow columns

--- a/devwidgets/discussion/css/discussion.css
+++ b/devwidgets/discussion/css/discussion.css
@@ -18,6 +18,7 @@
 /* Main Container */
 #discussion_main_container .fl-widget-content {
     padding: 10px;
+    overflow: auto;
 }
 .discussion_horizontal_rule {
     border: 1px solid #DDD;
@@ -31,9 +32,6 @@
 }
 
 /* Create new topic */
-#discussion_create_new_topic {
-    overflow: auto;
-}
 #discussion_create_new_topic label {
     display: block;
     margin: 5px 0px;
